2006-04-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk1497/a.out): Rename from textiter/.
	
	* Makefile.am (frysk2333/a.out): Renamed from glibtimer/.
	(glibtimer/gij.sh): Deleted.

2006-03-10  Phil Muldoon  <pmuldoon@redhat.com>

	* glibtimer/TestGlibTimerGC.java: New. Added XFAIL that tests
	http://sourceware.org/bugzilla/show_bug.cgi?id=2333
	as an expected fail on RHEL4-U3	
	* glibtimer/.cvsignore: New.
	* Makefile.am: Added glibtimer rules.

2006-02-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (gcjtreeiter/gij.sh): Create gcjtreeiter directory
	before creating gcjtreeiter/gij.sh.

2006-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (clean-local): Delete.
	(gcjtreeiter/IterTest.class): Separate out as explict rule.  Add
	to CLEANFILES.
	(TESTS_ENVIRONMENT): Send output to /dev/null.

	* Makefile.am (TESTS_ENVIRONMENT): Skip tests when no display.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (textiter/a.out): Delete reference to /opt/frysk.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Based on frysk-impots/tests/Makefile.am.
	* gcjtreeiter/.cvsignore: Copied from frysk-imports/tests/.
	* gcjtreeiter/IterTest.java: Ditto.
	* textiter/.cvsignore: Ditto.
	* textiter/JNICrash.java: Ditto.
	* .cvsignore: New.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: